# esp32-web-debugger-IDF

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  version
.github/workflows/: build.yml  shrinkHTML.py
data/: index.html
main/: CMakeLists.txt  adc_manager.c  adc_manager.h  gpio_manager.c  gpio_manager.h  i2c_manager.c  i2c_manager.h  main.c  uart_manager.c  uart_manager.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
